--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     .progress-fill { height: 100%; width: 0; background: #007acc; border-radius: 10px; }
     footer { margin-top: 3em; font-size: 0.85em; color: #888; }
   </style>
+  <!-- Load FFmpeg from updated CDN -->
+  <script src="[invalid url, do not cite]
 </head>
 <body>
   <h1>Free Video Converter</h1>
@@ -60,17 +62,16 @@
     <p>This site is currently being improved and might not function as intended.</p>
     <p>While you wait, feel free to explore our other tools:</p>
     <ul style="list-style:none; padding:0;">
-      <li><a href="https://free-qr-maker.com" style="color:#00d4ff;" target="_blank">free-qr-maker.com</a></li>
-      <li><a href="https://free-ean-maker.com" style="color:#00d4ff;" target="_blank">free-ean-maker.com</a></li>
-      <li><a href="https://free-image-toolkit.com" style="color:#00d4ff;" target="_blank">free-image-toolkit.com</a></li>
+      <li><a href="[invalid url, do not cite] style="color:#00d4ff;" target="_blank">free-qr-maker.com</a></li>
+      <li><a href="[invalid url, do not cite] style="color:#00d4ff;" target="_blank">free-ean-maker.com</a></li>
+      <li><a href="[invalid url, do not cite] style="color:#00d4ff;" target="_blank">free-image-toolkit.com</a></li>
     </ul>
     <button onclick="document.getElementById('constructionOverlay').style.display='none'" style="margin-top:1.5em; padding:0.75em 1.5em; background:#00d4ff; color:#000; border:none; border-radius:6px; font-size:1em; cursor:pointer;">Continue Anyway</button>
   </div>
 </div>
 
-  <!-- Updated FFmpeg from official CDN -->
-  <script src="https://unpkg.com/@ffmpeg/ffmpeg@0.11.6/dist/ffmpeg.min.js"></script>
   <script>
+    // Wait for the page to load
     document.addEventListener('DOMContentLoaded', function() {
       // Check if FFmpeg is loaded
       if (typeof FFmpeg === 'undefined') {
@@ -79,17 +80,16 @@
         return;
       }
 
-      // Fixed: Use compatible syntax instead of destructuring
+      // Access FFmpeg functions correctly
       const createFFmpeg = FFmpeg.createFFmpeg;
       const fetchFile = FFmpeg.fetchFile;
 
       const ffmpeg = createFFmpeg({
         log: true,
-        corePath: 'https://unpkg.com/@ffmpeg/core@0.11.0/dist/ffmpeg-core.js',
-        progress: function(p) {
-          const ratio = p.ratio;
+        corePath: 'https://cdn.jsdelivr.net/npm/@ffmpeg/core@0.12.15/dist/ffmpeg-core.js',
+        progress: ({ ratio }) => {
           const pct = Math.round(ratio * 100);
-          updateProgress(pct, 'Converting: ' + pct + '%');
+          updateProgress(pct, `Converting: ${pct}%`);
         }
       });
 
@@ -109,46 +109,33 @@
       const downloadLink = document.getElementById('downloadLink');
 
       // Setup drag/drop and click
-      videoInput.addEventListener('change', function(e) {
-        if (e.target.files[0]) processFile(e.target.files[0]);
-      });
-      dropZone.addEventListener('click', function() {
-        videoInput.click();
-      });
-      dropZone.addEventListener('dragover', function(e) {
-        e.preventDefault();
-        dropZone.classList.add('active');
-      });
-      dropZone.addEventListener('dragleave', function(e) {
+      videoInput.addEventListener('change', e => e.target.files[0] && processFile(e.target.files[0]));
+      dropZone.addEventListener('click', () => videoInput.click());
+      dropZone.addEventListener('dragover', e => { e.preventDefault(); dropZone.classList.add('active'); });
+      dropZone.addEventListener('dragleave', e => { e.preventDefault(); dropZone.classList.remove('active'); });
+      dropZone.addEventListener('drop', e => {
         e.preventDefault();
         dropZone.classList.remove('active');
-      });
-      dropZone.addEventListener('drop', function(e) {
-        e.preventDefault();
-        dropZone.classList.remove('active');
-        if (e.dataTransfer.files[0]) processFile(e.dataTransfer.files[0]);
+        e.dataTransfer.files[0] && processFile(e.dataTransfer.files[0]);
       });
       convertBtn.addEventListener('click', startConversion);
 
       function processFile(file) {
         const allowedTypes = ['video/mp4','video/quicktime','video/x-msvideo','video/x-matroska','video/webm'];
         const ext = '.' + file.name.split('.').pop().toLowerCase();
-        if (!allowedTypes.includes(file.type) {
-          // Additional check by extension if type not detected
-          if (!['.mp4','.mov','.avi','.mkv','.webm'].includes(ext)) {
-            return alert('Unsupported video format.');
-          }
+        if (!allowedTypes.includes(file.type) && !['.mp4','.mov','.avi','.mkv','.webm'].includes(ext)) {
+          return alert('Unsupported video format.');
         }
         if (file.size > 100 * 1024 * 1024) return alert('File exceeds 100MB.');
         uploadedFile = file;
-        dropZoneText.textContent = 'Selected: ' + file.name + ' (' + (file.size/1024/1024).toFixed(2) + ' MB)';
+        dropZoneText.textContent = `Selected: ${file.name} (${(file.size/1024/1024).toFixed(2)} MB)`;
         convertBtn.disabled = false;
       }
 
       function updateProgress(percent, msg) {
-        progressFill.style.width = percent + '%';
+        progressFill.style.width = `${percent}%`;
         progressMessage.textContent = msg;
-        progressPercent.textContent = percent + '%';
+        progressPercent.textContent = `${percent}%`;
       }
 
       async function startConversion() {
@@ -162,18 +149,16 @@
         const quality = document.getElementById('quality').value;
         const muteAudio = document.getElementById('mute-audio').checked;
         const inputExt = uploadedFile.name.split('.').pop();
-        const inputName = 'input.' + inputExt;
-        const outputName = 'output.' + format;
+        const inputName = `input.${inputExt}`;
+        const outputName = `output.${format}`;
 
         try {
           updateProgress(10, 'Loading FFmpeg...');
-          if (!ffmpeg.isLoaded()) {
-            await ffmpeg.load();
-          }
+          if (!ffmpeg.isLoaded()) await ffmpeg.load();
           updateProgress(30, 'Writing file...');
           ffmpeg.FS('writeFile', inputName, await fetchFile(uploadedFile));
 
-          var args = ['-i', inputName];
+          const args = ['-i', inputName];
           if (quality === 'high') args.push('-crf', '18');
           else if (quality === 'medium') args.push('-crf', '23');
           else if (quality === 'low') args.push('-crf', '28');
@@ -181,20 +166,19 @@
           args.push(outputName);
 
           updateProgress(50, 'Converting...');
-          await ffmpeg.run.apply(ffmpeg, args);
+          await ffmpeg.run(...args);
           updateProgress(90, 'Preparing download...');
 
           const data = ffmpeg.FS('readFile', outputName);
-          const blob = new Blob([data.buffer], { type: 'video/' + format });
+          const blob = new Blob([data.buffer], { type: `video/${format}` });
           const url = URL.createObjectURL(blob);
           downloadLink.href = url;
-          downloadLink.download = 'converted.' + format;
+          downloadLink.download = `converted.${format}`;
           resultContainer.style.display = 'block';
           updateProgress(100, 'Done');
         } catch (e) {
           console.error('Conversion error:', e);
-          updateProgress(0, 'Conversion failed');
-          alert('Conversion error: ' + e.message);
+          alert(`Conversion error: ${e.message}`);
         } finally {
           conversionInProgress = false;
           convertBtn.disabled = false;
