--- a/index.html
+++ b/index.html
@@ -265,14 +265,14 @@
   <p>Instantly convert and download videos with advanced options!</p>
 
   <div class="drop-zone" id="dropZone">
-    <p id="dropZoneText"><span alt="Upload icon">📁</span> Drop your video here or click to upload</p>
+    <p id="dropZoneText"><span alt="Upload icon">📁</span> Choose file or drag and drop here</p>
     <p>Supported formats: MP4, WEBM, MOV, AVI, MKV</p>
     <p>Max file size: 100MB</p>
     <input type="file" id="videoInput" accept="video/mp4,video/webm,video/quicktime,video/x-msvideo,video/x-matroska" class="hidden">
   </div>
 
   <div id="fileInfo" class="file-info hidden">
-    <div class="file-detail"><span>Name:</span> <span id="fileName">-</span></div>
+    <div class="file-detail"><span>Name:</span> <span id="fileName">No file selected</span></div>
     <div class="file-detail"><span>Size:</span> <span id="fileSize">-</span></div>
     <div class="file-detail"><span>Type:</span> <span id="fileType">-</span></div>
     <div class="file-detail"><span>Dimensions:</span> <span id="fileDimensions">-</span></div>
