--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
   </div>
 
   <footer>
-    Free Video Converter. Made with ❤️
+    Free Video Converter | Made with ❤️
   </footer>
 
   <script>
