--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Free online video converter to MP4, WEBM, or GIF. Convert videos instantly in your browser with advanced settings for quality, resolution, and more. No signup required.">
-  <meta name="keywords" content="video converter, free video converter, online video converter, convert video to mp4, convert video to webm, convert video to gif, video conversion tool">
-  <meta name="author" content="Free Video Converter">
-  <meta property="og:title" content="Free Video Converter - Convert Videos Online Instantly">
+  <meta name="keywords" content="video converter, free video toolkit, online video converter, convert video to mp4, convert video to webm, convert video to gif, video toolkit">
+  <meta name="author" content="Free Video Toolkit">
+  <meta name="robots" content="index, follow">
+  <meta name="googlebot" content="index, follow">
+  <meta property="og:title" content="Free Video Toolkit - Free Online Video Converter">
   <meta property="og:description" content="Convert videos to MP4, WEBM, or GIF for free with advanced options. No signup, no server uploads, all processing in your browser.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://www.free-video-converter.com">
-  <meta property="og:image" content="https://www.free-video-converter.com/og-image.jpg">
+  <meta property="og:url" content="https://free-video-toolkit.com">
+  <meta property="og:image" content="https://free-video-toolkit.com/images/og-image.jpg">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Free Video Converter - Instant Video Conversion">
+  <meta name="twitter:title" content="Free Video Toolkit - Free Online Video Converter">
   <meta name="twitter:description" content="Convert videos to MP4, WEBM, or GIF with customizable settings. Free, fast, and secure in-browser processing.">
-  <meta name="twitter:image" content="https://www.free-video-converter.com/og-image.jpg">
-  <title>Free Video Converter - Instant Online Video Conversion</title>
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="twitter:image" content="https://free-video-toolkit.com/images/twitter-image.jpg">
+  <title>Free Video Toolkit - Free Online Video Converter</title>
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <link rel="canonical" href="https://free-video-toolkit.com">
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-LR5XP1GJFC"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -24,15 +27,14 @@
     gtag('js', new Date());
     gtag('config', 'G-LR5XP1GJFC');
   </script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4041775163958551" crossorigin="anonymous"></script>
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
-      "@type": "WebApplication",
-      "name": "Free Video Converter",
-      "description": "Free online video converter to MP4, WEBM, or GIF with advanced settings for quality, resolution, and more. No signup required.",
-      "url": "https://www.free-video-converter.com",
-      "applicationCategory": "Multimedia",
-      "operatingSystem": "All"
+      "@type": "WebSite",
+      "name": "Free Video Toolkit",
+      "url": "https://free-video-toolkit.com",
+      "description": "Free online video converter to MP4, WEBM, or GIF with advanced settings for quality, resolution, and more. No signup required."
     }
   </script>
   <style>
@@ -42,6 +44,7 @@
       padding: 2em;
       background: #f4f4f4;
       color: #333;
+      margin: 0;
     }
     h1 {
       font-size: 2em;
@@ -233,7 +236,7 @@
       max-width: 400px;
       width: 90%;
       text-align: center;
-      transition: background-color 0.3s ease;
+      transition: max-width 0.3s ease;
     }
     .sister-site-btn:hover {
       background-color: #cc5200;
@@ -246,7 +249,7 @@
       color: #333;
     }
     .sister-tools-section p {
-      font-size: 1em;
+      margin-bottom: 1em;
       max-width: 600px;
       margin: 1em auto;
     }
@@ -258,10 +261,31 @@
     .hidden {
       display: none;
     }
+    .ad-container {
+      margin: 1em auto;
+      max-width: 100%;
+      text-align: center;
+    }
+    @media (max-width: 600px) {
+      .ad-container {
+        width: 100%;
+      }
+    }
   </style>
 </head>
 <body>
-  <h1>Free Video Converter</h1>
+  <h1>Free Video Toolkit</h1>
+  <div class="ad-container">
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-4041775163958551"
+         data-ad-slot="1294132268"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+  </div>
   <p>Instantly convert and download videos with advanced options!</p>
 
   <div class="drop-zone" id="dropZone">
@@ -377,24 +401,47 @@
     <a id="downloadLink" class="download-btn">Download Converted Video</a>
   </div>
 
+  <div class="ad-container">
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-4041775163958551"
+         data-ad-slot="8266734729"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+  </div>
+
   <hr style="margin: 2em auto; width: 80%; border: 0; border-top: 1px solid #ddd;" />
 
   <div class="sister-tools-section">
-    <h2>Try Our Other Free Tools</h2>
+    <h2>Explore Our Other Free Tools</h2>
     <p>All our tools process your data entirely in your browser, ensuring your files are never stored or uploaded, keeping your privacy completely secure.</p>
-    <a href="https://www.free-qr-maker.com" target="_blank" rel="noopener noreferrer" class="sister-site-btn">
+    <a href="https://free-qr-maker.com" target="_blank" rel="noopener noreferrer" class="sister-site-btn">
       Free QR Code Generator
     </a>
-    <a href="https://www.free-ean-maker.com" target="_blank" rel="noopener noreferrer" class="sister-site-btn">
-      Free Barcode Generator
+    <a href="https://free-ean-maker.com" target="_blank" rel="noopener noreferrer" class="sister-site-btn">
+      Free EAN Barcode Generator
     </a>
-    <a href="https://www.free-image-toolkit.com" target="_blank" rel="noopener noreferrer" class="sister-site-btn">
+    <a href="https://free-image-toolkit.com" target="_blank" rel="noopener noreferrer" class="sister-site-btn">
       Free Image Toolkit
     </a>
   </div>
 
   <footer>
-    Free Video Converter | Made with ❤️
+    <div class="ad-container">
+      <ins class="adsbygoogle"
+           style="display:block"
+           data-ad-client="ca-pub-4041775163958551"
+           data-ad-slot="5895113449"
+           data-ad-format="auto"
+           data-full-width-responsive="true"></ins>
+      <script>
+           (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+    </div>
+    <p>Free Video Toolkit | Made with ❤️</p>
   </footer>
 
   <script>
@@ -464,12 +511,12 @@
         const ext = '.' + file.name.split('.').pop().toLowerCase();
 
         if (!allowedTypes.includes(file.type) && !allowedExtensions.includes(ext)) {
-          alert('Unsupported video format. Please upload MP4, WEBM, MOV, AVI, or MKV.');
+          alert('Invalid file type. Please select a supported format (MP4, WEBM, MOV, AVI, or MKV).');
           return;
         }
 
         if (file.size > 100 * 1024 * 1024) {
-          alert('File exceeds 100MB limit. Please choose a smaller file.');
+          alert('File size exceeds 100MB limit. Please select a smaller file.');
           return;
         }
 
@@ -499,8 +546,9 @@
 
           refs.convertBtn.disabled = false;
         } catch (error) {
-          alert('Error processing video file. Please try another file.');
+          alert('Error processing video: ' + error.message);
           cleanup();
+          refs.convertBtn.disabled = true;
         }
       }
 
@@ -631,7 +679,7 @@
             drawFrame();
           });
 
-          // Set up MediaRecorder
+          // Setup MediaRecorder
           state.stream = state.canvas.captureStream(framerate === 'original' ? 30 : parseInt(framerate));
           state.recordedChunks = [];
 
