--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     gtag('js', new Date());
     gtag('config', 'G-LR5XP1GJFC');
   </script>
+  <!-- Load AdSense script once -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4041775163958551" crossorigin="anonymous"></script>
   <script type="application/ld+json">
     {
@@ -276,6 +277,7 @@
 <body>
   <h1>Free Video Toolkit</h1>
   <div class="ad-container">
+    <!-- Header_AD -->
     <ins class="adsbygoogle"
          style="display:block"
          data-ad-client="ca-pub-4041775163958551"
@@ -402,6 +404,7 @@
   </div>
 
   <div class="ad-container">
+    <!-- Content_AD -->
     <ins class="adsbygoogle"
          style="display:block"
          data-ad-client="ca-pub-4041775163958551"
@@ -431,6 +434,7 @@
 
   <footer>
     <div class="ad-container">
+      <!-- Footer_AD -->
       <ins class="adsbygoogle"
            style="display:block"
            data-ad-client="ca-pub-4041775163958551"
