--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <title>Free Video Toolkit - Free Online Video Converter</title>
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link rel="canonical" href="https://free-video-toolkit.com">
+  <script>if (window.location.hostname === 'www.free-video-toolkit.com') {window.location.href = 'https://free-video-toolkit.com' + window.location.pathname + window.location.search;}</script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-LR5XP1GJFC"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
