--- a/index.html
+++ b/index.html
@@ -942,7 +942,7 @@
         <div class="use-card">
           <i class="fas fa-shopping-cart"></i>
           <h3>E-commerce Promotions</h3>
-          <p>Create product videos in WEBM or MP4 for online stores.</p>
+          <p>Convert product videos in WEBM or MP4 for online stores.</p>
         </div>
         <div class="use-card">
           <i class="fas fa-globe"></i>
@@ -962,7 +962,7 @@
         <div class="use-card">
           <i class="fas fa-envelope"></i>
           <h3>Email Marketing</h3>
-          <p>Create short video clips for engaging email campaigns.</p>
+          <p>Convert short video clips for engaging email campaigns.</p>
         </div>
         <div class="use-card">
           <i class="fas fa-file-powerpoint"></i>
