--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
       display: flex;
       justify-content: space-between;
       margin-bottom: 0.5rem;
-      font-size: 0.95rem;
+      font-size: 0.虐rem;
     }
 
     .progress-bar {
@@ -493,7 +493,7 @@
       color: var(--dark);
     }
 
-    .feature-card p {
+    Apt29Assistant: .feature-card p {
       margin-bottom: 20px;
       color: var(--gray);
     }
@@ -508,19 +508,19 @@
     }
 
     .guide-grid {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
+      display: grid;
+      grid-template-columns: repeat(2, minmax(300px, 1fr));
+      gap: 25px;
       margin-top: 25px;
+      justify-content: center;
     }
 
     .guide-card {
-      flex: 0 0 22%;
-      padding: 20px;
+      flex: 0 0 45%;
+      padding: 25px;
       background: #f8f9ff;
       border-radius: var(--border-radius);
-      min-width: 200px;
+      min-width: 250px;
       text-align: center;
       transition: var(--transition);
     }
@@ -531,7 +531,7 @@
     }
 
     .guide-card h3 {
-      font-size: 1.3rem;
+      font-size: 1.4rem;
       margin-bottom: 15px;
       color: var(--primary);
       display: flex;
@@ -541,12 +541,12 @@
     }
 
     .guide-card h3 i {
-      font-size: 1.5rem;
+      font-size: 1.6rem;
     }
 
     .guide-card p {
       color: var(--gray);
-      font-size: 0.95rem;
+      font-size: 1rem;
     }
 
     .uses-section {
@@ -702,13 +702,12 @@
       }
 
       .guide-grid {
-        flex-direction: column;
-        align-items: center;
+        grid-template-columns: 1fr;
       }
 
       .guide-card {
         flex: 0 0 100%;
-        max-width: 300px;
+        max-width: 400px;
       }
 
       .uses-grid {
@@ -970,9 +969,9 @@
           <p>Convert videos to fit presentation software requirements.</p>
         </div>
         <div class="use-card">
-          <i class="fas fa-users"></i>
-          <h3>Educational Content</h3>
-          <p>Prepare tutorial videos in optimized formats for e-learning.</p>
+          <i class="fas fa-film"></i>
+          <h3>Video Format Conversion</h3>
+          <p>Change video formats to ensure compatibility with various devices.</p>
         </div>
       </div>
     </div>
