--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
       display: flex;
       justify-content: space-between;
       margin-bottom: 0.5rem;
-      font-size: 0.虐rem;
+      font-size: 0.95rem;
     }
 
     .progress-bar {
@@ -493,7 +493,7 @@
       color: var(--dark);
     }
 
-    Apt29Assistant: .feature-card p {
+    .feature-card p {
       margin-bottom: 20px;
       color: var(--gray);
     }
@@ -778,13 +778,30 @@
       </div>
     </div>
 
-    <div class="card">
-      <div class="tabs">
-        <div class="tab active" data-tab="convert">
-          <i class="fas fa-exchange-alt"></i> Convert
+    <div class="guide-section">
+      <h2><i class="fas fa-book"></i> Video Editing Guide</h2>
+      <p>Follow these simple steps to convert your videos with Free Video Toolkit:</p>
+      <div class="guide-grid">
+        <div class="guide-card">
+          <h3><i class="fas fa-upload"></i> Upload Video</h3>
+          <p>Drag or browse to upload your video (MP4, WEBM, MOV, AVI, MKV).</p>
+        </div>
+        <div class="guide-card">
+          <h3><i class="fas fa-sliders-h"></i> Customize Settings</h3>
+          <p>Adjust output format, quality, resolution, framerate, or audio options.</p>
+        </div>
+        <div class="guide-card">
+          <h3><i class="fas fa-exchange-alt"></i> Convert Video</h3>
+          <p>Click "Convert Video" to process with your chosen settings.</p>
+        </div>
+        <div class="guide-card">
+          <h3><i class="fas fa-download"></i> Save Video</h3>
+          <p>Download your converted video instantly to your device.</p>
         </div>
       </div>
+    </div>
 
+    <div class="card">
       <div class="tab-content active" id="convert-tab">
         <h2><i class="fas fa-exchange-alt"></i> Video Converter</h2>
         <p><i>Convert videos to MP4, WEBM, or GIF with customizable settings.</i></p>
@@ -902,29 +919,6 @@
         <div id="resultContainer" class="result-container">
           <p>Conversion Complete!</p>
           <a id="downloadLink" class="download-btn"><i class="fas fa-download"></i> Download Converted Video</a>
-        </div>
-      </div>
-    </div>
-
-    <div class="guide-section">
-      <h2><i class="fas fa-book"></i> Video Editing Guide</h2>
-      <p>Follow these simple steps to convert your videos with Free Video Toolkit:</p>
-      <div class="guide-grid">
-        <div class="guide-card">
-          <h3><i class="fas fa-upload"></i> Upload Video</h3>
-          <p>Drag or browse to upload your video (MP4, WEBM, MOV, AVI, MKV).</p>
-        </div>
-        <div class="guide-card">
-          <h3><i class="fas fa-sliders-h"></i> Customize Settings</h3>
-          <p>Adjust output format, quality, resolution, framerate, or audio options.</p>
-        </div>
-        <div class="guide-card">
-          <h3><i class="fas fa-exchange-alt"></i> Convert Video</h3>
-          <p>Click "Convert Video" to process with your chosen settings.</p>
-        </div>
-        <div class="guide-card">
-          <h3><i class="fas fa-download"></i> Save Video</h3>
-          <p>Download your converted video instantly to your device.</p>
         </div>
       </div>
     </div>
